--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -640,12 +640,11 @@ So for $F(1,24) = 4.40, p = .023$.
 
 Now the effect size.
 
-
 ```{r}
 n_per_cell = 5
 mse_n = 2*3*n_per_cell
 
-means_to_compare = c(xbar1, xbar2, xbar3)
+means_to_compare = c(mean_cell1, mean_cell2, mean_cell3)
 n_for_means = c(n_per_cell, n_per_cell, n_per_cell)
 comparison_weights = c(-1, .5, .5)
 
