--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -621,7 +621,7 @@ print(Fvalue)
 #### contrast (mult) p-value
 
 ```{r}
-df1 = 1   # two means being compared to 2 - 1
+df1 = 1   # two means being compared so: 2 - 1 df
 df2 = 24 #recall 24 df for MSE:  ab(n-1)
 
 pvalue_nondirectional = pf(Fvalue,
