--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -662,6 +662,16 @@ ci.sc(means = means_to_compare,
 #### contrast (mult) text
 
 
+#### contrasts in practice
+
+See book Maxwell et al.
+
+
+
+
+
+
+
 
 
 
