--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -660,7 +660,7 @@ Now the effect size. To calculate the effect size we need to use a rather odd no
 So if we think of the cell means in order:
 
 $$
-x_1, x_2, x_3
+\bar{x_1}, \bar{x_2}, \bar{x_3}
 $$
 
 If we want $x_1$ compared to the average of cells two ($x_2$ and $x_3$) then we would use the weights
