--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -281,7 +281,7 @@ $$
 $$
 
 
-We use this value to calculate the variance of the population means. Which we find to be 0 because the population means are all the same.
+We use this value to calculate the variance of the population means. **Which we find to be larger than zero because the population means are different.**
 
 $$
 \begin{aligned} 
@@ -469,7 +469,7 @@ First, we estimate the population variance:
 
 $$
 \begin{aligned}
-\text{variance due to sampling error} &= \frac{s_{negative}^2+s_{none}^2+s_{positive}^2}{3}\\
+s_{people}^2 &= \frac{s_{negative}^2+s_{none}^2+s_{positive}^2}{3}\\
 &= \frac{41157141+37084531+31086669}{3}\\
 &= 36442780\\
 \end{aligned}
