--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -356,7 +356,7 @@ Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer
 
 Notably, we are missing a standardized effect size, with confidence interval, for the above.
 
-#### contrast effect size
+#### contrast standardized effect size
 
 We can calculate an effect size with a CI for this comparison using the formula below.
 
@@ -416,13 +416,43 @@ ci.sc(means = means_to_compare,
       N = mse_n)
 ```
 
+
+#### contrast raw effect size
+
+A contrast can also be expressed as an effect size in original units. This type of effect size is often referenced by many names:
+
+* original unit effect size
+* raw effect size
+* unstandardized effect size
+
+Let's revisit our example data. Previously, we had two sample means: `r mean_c1` and `r mean_c2`. The undstandardized effect size (i.e., original unit effect size) is simply the difference between these two means.
+
+$$
+\begin{aligned}
+\text{original unit effect size} = M_{diff} &= \bar{c_2} - \bar{c_1}\\
+&= `r mean_c2` - `r mean_c1`\\
+&= `r mean_c2 - mean_c1`
+\end{aligned}
+$$
+We also want a confidence interval around this unstandardized effect size. We can obtain that interval with the code below.
+
+```{r}
+ci.c(means = means_to_compare,
+      c.weights = comparison_weights,
+      n = rep(n_per_cell, 2),
+      s.anova = s_people,
+      N = mse_n)
+```
+
+
+
 #### contrast text
 
-Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.60$, $sc = 2.14$, 95% $CI[0.77, 3.49$]) than low preparation students,($M = 71.40$, $SD = 5.50$), $F(1, 24)= 11.482$, $p = .001$.
+Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.60$, 95% $CI[6.56, 26.64]$, $sc = 2.14$, 95% $CI[0.77, 3.49$]) than low preparation students,($M = 71.40$, $SD = 5.50$), $F(1, 24)= 11.482$, $p = .001$.
 
 But, as noted, some people might just write this up calling the effect size a $d$-value:
 
-Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.60$, $d = 2.14$, 95% $CI[0.77, 3.49$]) than low preparation students,($M = 71.40$, $SD = 5.50$), $F(1, 24)= 11.482$, $p = .001$.
+Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.60$, 95% $CI[6.56, 26.64]$, $d = 2.14$, 95% $CI[0.77, 3.49$]) than low preparation students,($M = 71.40$, $SD = 5.50$), $F(1, 24)= 11.482$, $p = .001$.
 
 The fact that you could calculate a $d$-value in two different ways (using difference variance calculations) illustrates why it is **extremely** important that you indicate in your paper (even in a footnote) the formula you used to calculate the $d$-value and pooled variance terms.
 
@@ -636,9 +666,9 @@ print(pvalue_directional)
 
 Among jugglers, the combined mean of calmness for high and medium preparation students ($M = 80.30$) was higher than the mean ($M_{\text{diff}} = 8.90$) for low preparation students,($M = 71.40$), $F(1,24) = 4.40, p = .023$.
 
-But we would still like to put an effect size in this sentence.
+But we would still like to put an effect size in this sentence. Below we calculate the standardized and unstandardized effect sizes.
 
-#### contrast (mult) effect size
+#### contrast (mult) standardized effect size
 
 Now the effect size. To calculate the effect size we need to use a rather odd notation. But this odd notation is commonly used with contrasts. We assign weights to the contrasts using a few rules.
 
@@ -688,9 +718,34 @@ ci.sc(means = means_to_compare,
       N = mse_n)
 ```
 
+
+
+#### contrast (multi) raw effect size
+
+A contrast can also be expressed as an effect size in original units. Let's revisit our example data. Previously, we had two sample means: `r xcm2` and `r xcm1`. The undstandardized effect size (i.e., original unit effect size) is simply the difference between these two means.
+
+$$
+\begin{aligned}
+\text{original unit effect size} = M_{diff} &= \bar{c_2} - \bar{c_1}\\
+&= `r xcm2` - `r xcm1`\\
+&= `r xcm2 - xcm1`
+\end{aligned}
+$$
+We also want a confidence interval around this unstandardized effect size. We can obtain that interval with the code below.
+
+```{r}
+ci.c(means = means_to_compare,
+      c.weights = comparison_weights,
+      n = n_for_means,
+      s.anova = s_people,
+      N = mse_n)
+```
+
+
+
 #### contrast (mult) text
 
-Among jugglers, the combined mean of calmness for high and medium preparation students ($M = 80.30$) was higher than the mean ($M_{\text{diff}} = 8.90$, $sc = 1.15$, 95% $CI[.02, 2.26]$) for low preparation students,($M = 71.40$), $F(1,24) = 4.40, p = .023$.
+Among jugglers, the combined mean of calmness for high and medium preparation students ($M = 80.30$) was higher than the mean ($M_{\text{diff}} = 8.90$, 95% $CI[0.19, 17.61]$, $sc = 1.15$, 95% $CI[.02, 2.26]$) for low preparation students,($M = 71.40$), $F(1,24) = 4.40, p = .023$.
 
 #### contrasts in practice
 
