--- a/21-mmr.Rmd
+++ b/21-mmr.Rmd
@@ -11,6 +11,10 @@ The following CRAN packages must be installed:
 |tidyverse          |
 |remotes            |
 
+| Data |
+|-------------------|
+|[data_endurance.csv](data_endurance.csv)   |
+
 The following GitHub packages must be installed:
 
 | Required GitHub Packages |
