--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -84,7 +84,7 @@ $$
 \end{aligned} 
 $$
 
-**Why do we use squared differences instead of just differences?** Well, there are many reasons and it's too early to discuss them in detail. However, one easy to understand reason for using squared differences is that the if we were to just use differences (not squared) we would end up with a value of zero, as illustrated below. Which might be interpreted (incorrectly) as suggesting there is no variability in the numbers - when clearly there is variability. However, the full reasons for use squared differences are more complex than this simple example illustrates.
+**Why do we use squared differences instead of just differences?** Well, there are many reasons and it's too early to discuss them in detail. However, one easy to understand reason for using squared differences is that the if we were to just use differences (not squared) we would end up with a value of zero, as illustrated below. Which might be interpreted (incorrectly) as suggesting there is no variability in the numbers - when clearly there is variability. However, the full reasons for using squared differences are more complex than this simple example illustrates.
 
 $$
 \begin{aligned} 
