--- a/23-tools.Rmd
+++ b/23-tools.Rmd
@@ -126,7 +126,11 @@ knitr::include_graphics("ch_tools/images/papaja_template.png")
 
 The rmarkdown language for document creation has evolved into [Quarto](https://quarto.org). Quarto is more or less the same but is cross-platform statistically (i.e., Python, Julia, etc.). It represents the next step in this approach to document creation. I suggest you check it out - but Quarto is still in the early days. There are not nearly as many blogs, posts, or YouTube videos on Quarto as there are on rmarkdown - yet. So right now, I suggest you still learn rmarkdown, but realize the future is a slightly tweaked version of rmarkdown called Quarto.
 
-Here is a package for [Quarto APA 7 papers](https://github.com/wjschne/apaquarto).
+Check out Mine Çetinkaya-Rundel's video [Get started with Quarto](https://www.youtube.com/watch?v=_f3latmOhew).
+
+Also see [Create & Publish a Quarto Blog on Quarto Pub in 100 Seconds](https://www.youtube.com/watch?v=t8qtcDyCRFA).
+
+You might also want to check a package for [Quarto APA 7 papers](https://github.com/wjschne/apaquarto).
 
 
 ### apaTables
