--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -46,9 +46,7 @@ $$
 where 
 
 $$
-\begin{aligned} 
-\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{a}
-\end{aligned} 
+\mu_{\mu_A} =  \frac{\sum{\mu_A}}{a}
 $$
 
 
@@ -233,9 +231,7 @@ We take the variance of all of those sample means and get a value of 30.80005 wh
 **That is, when multiple populations have identical means, the variance of sample means from those populations is due entirely to sampling error. That variance of sample means is represented by the formula below:**
 
 $$
-\begin{aligned} 
-\text{variance due to sampling error} &= \frac{\sigma_{people}^2}{n}\\
-\end{aligned}
+\text{variance due to sampling error} = \frac{\sigma_{people}^2}{n}\\
 $$
 
 
@@ -344,9 +340,7 @@ We take the variance of all of those sample means and get a value of 297.7683 wh
 **That is, when multiple populations have different means, the variance of sample means from those populations is due to both sampling error and the variance of the population means. That variance of sample means is represented by the formula below:**
 
 $$
-\begin{aligned} 
-\sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n} + \sigma_{\mu_A}^2\\
-\end{aligned}
+\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n} + \sigma_{\mu_A}^2\\
 $$
 
 ## Back to ANOVA
@@ -398,9 +392,7 @@ Now consider what happens to the above $F$-value when the population means are *
 The $F$-value formulas presented above are for the expected values. How do we calculate $F$-values in practice? The formula below estimates the variance in sample means due to all sources (sampling error and the variance in population means): 
 
 $$
-\begin{aligned} 
 s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}
-\end{aligned}
 $$
 
 
