--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -350,7 +350,9 @@ We use the formula below to average the cell variances **when the sample sizes f
 
 $$
 \begin{aligned}
-s_{people}^2 &=\frac{s_1^2 + s_2^2 + s_3^2 + s_4^2 + s_5^2 + s_6^2}{6}\\ &= \frac{`r var1` + `r var2` +`r var3` +`r var4` +`r var5` +`r var6` }{6} \\ &= `r mean(var_all)`
+s_{people}^2 =\frac{s_1^2 + s_2^2 + s_3^2 + s_4^2 + s_5^2 + s_6^2}{6}\\ 
+&= \frac{`r var1` + `r var2` +`r var3` +`r var4` +`r var5` +`r var6` }{6} \\ 
+&= `r mean(var_all)`
 \end{aligned}
 $$
 
@@ -471,7 +473,7 @@ Therefore, for these cell means the general formula for the variance due to samp
 
 $$
 \begin{aligned}
-\text{Sampling error variance for cell means} = \sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{\text{sample size}}\\
+\text{Sampling error variance for cell means} &= \sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{\text{sample size}}\\
 &= \frac{\sigma_{people}^2}{n}\\
 \end{aligned}
 $$
@@ -520,7 +522,8 @@ If we knew the **population means** we could:
 
 $$
 \begin{aligned}
-\text{Grand mean} = \mu_A &= \frac{\sum\mu_{A_i}}{a} \\
+\text{Grand mean} &= \mu_A \\
+&= \frac{\sum\mu_{A_i}}{a} \\
 &= \frac{\mu_{A_1}+\mu_{A_2}}{2}\\
 &= \frac{? + ?}{2}
 \end{aligned}
@@ -552,7 +555,8 @@ knitr::include_graphics("ch_deeper_nway/images/nway_design_A_sample.png")
 
 $$
 \begin{aligned}
-\text{Grand mean estimate} = \bar{\bar{x}} &= \frac{\sum \overline{x_{A_i}}}{a} \\
+\text{Grand mean estimate} &= \bar{\bar{x}} \\
+&= \frac{\sum \overline{x_{A_i}}}{a} \\
 &= \frac{\overline{x_{A_1}}+\overline{x_{A_2}}}{2}\\
 &= \frac{77.33333 + 55.8}{2} \\
 &= 66.56667\\
@@ -724,7 +728,8 @@ If we knew the **population** means we could:
 
 $$
 \begin{aligned}
-\text{Grand mean} = \mu_B &= \frac{\sum\mu_{B_i}}{b} \\
+\text{Grand mean} &= \mu_B \\
+&= \frac{\sum\mu_{B_i}}{b} \\
 &= \frac{\mu_{B_1}+\mu_{B_2}+\mu_{B_3}}{3}\\
 &= \frac{? + ? + ?}{3}
 \end{aligned}
@@ -755,7 +760,8 @@ knitr::include_graphics("ch_deeper_nway/images/nway_design_B_sample.png")
 
 $$
 \begin{aligned}
-\text{Grand mean estimate} = \bar{\bar{x}} &= \frac{\sum \bar{x}_{B_i}}{b} \\
+\text{Grand mean estimate} &= \bar{\bar{x}} \\
+&= \frac{\sum \bar{x}_{B_i}}{b} \\
 &= \frac{\overline{x_{B_1}}+\overline{x_{B_2}} +\overline{x_{B_3}} }{3}\\
 &= \frac{65.4 + 62.6 + 71.7}{3} \\
 &= 66.56667\\
