--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -8,7 +8,7 @@
 \begin{center}
 To my students,
 
-from whom I've learn so much about teaching.
+from whom I've learned so much about teaching.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
