--- a/packages.bib
+++ b/packages.bib
@@ -1,8 +1,8 @@
 @Manual{R-apaTables,
   title = {apaTables: Create American Psychological Association (APA) Style Tables},
   author = {David Stanley},
-  year = {2023},
-  note = {R package version 3.0.0},
+  year = {2021},
+  note = {R package version 2.0.8},
   url = {https://github.com/dstanley4/apaTables},
 }
 
@@ -19,7 +19,7 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 0.33},
+  note = {R package version 0.34},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
@@ -27,7 +27,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2023},
-  note = {R package version 1.0.4},
+  note = {R package version 1.0.5},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -105,7 +105,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.43},
   url = {https://yihui.org/knitr/},
 }
 
@@ -168,7 +168,7 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
-  note = {R package version 2.21},
+  note = {R package version 2.23},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -226,7 +226,7 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2016},
-  note = {ISBN 978-1138700109},
+  isbn = {978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
 }
 
