--- a/01-introduction_to_R.Rmd
+++ b/01-introduction_to_R.Rmd
@@ -146,7 +146,7 @@ It can be hard to keep track of files you use and create when using RStudio. The
 
 1. Create a folder on your computer called "psyc6060_project_1". Be sure you know where you create this folder so you can find it again easily.
 
-2. Download the data_okcupid.csv file, linked: [here](https://github.com/dstanley4/psyc6060bookdown/raw/main/data_okcupid.csv) (Right click link to download file). **NOTE:You must get this file from your Downloads folder. For many people (on macOS) the file may Open in Numbers - then they are tempted to save it from Numbers. This will not work. Just close Numbers. Then retrieve the file from you Downloads folder.**
+2. Download the [data_okcupid.csv](data_okcupid.csv) file. **NOTE:You must get this file from your Downloads folder. For many people (on macOS) the file may Open in Numbers - then they are tempted to save it from Numbers. This will not work. Just close Numbers. Then retrieve the file from you Downloads folder.**
 
 3. Place the data_okcupid.csv file into the psyc6060_project_1 folder.
 
